[package]
name = "stepn"
authors = [
    "rnitta<attinyes@gmail.com>"
]
description = "step-by-step command runner"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
futures = "0.3"
once_cell = "1.10.0"
serde = { version = "^1.0.137", features = ["derive"] }
signal-hook = "0.3.14"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
toml = "0.5"
ctrlc = "3.2.2"
nix = { version = "0.24.1", features = ["signal", "process", "aio"] }
sysinfo = "0.26.4"
seahorse = "2.1.0"
