[package]
name = "stepn"
authors = [
    "rnitta<attinyes@gmail.com>"
]
description = "step-by-step command runner"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/rnitta/stepn"
keywords = ["process-manager", "cli", "runner", "devtools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1"
colored = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
ctrlc = "3"
nix = { version = "0.29", features = ["signal", "process"] }
sysinfo = "0.33"
seahorse = "2.1"
